--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,8 @@ version: 2.1
 
 jobs:
   build:
-    working_directory: ~/circleci-java
     docker:
-      - image: circleci/openjdk:8-jdk-stretch
+      - image: circleci/openjdk:11-jdk-buster
 
     steps:
       - checkout
@@ -17,28 +16,28 @@ jobs:
           key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
       - run: mvn package
 
-  publish_image_to_quay:
+  publish_image:
     docker:
-      - image: circleci/openjdk:8-jdk-stretch
+      - image: circleci/openjdk:11-jdk-buster
 
     steps:
       - checkout
       - setup_remote_docker:
-          version: 18.06.0-ce
+          version: 19.03.13
+          docker_layer_caching: true
       - run:
-          command: docker run --privileged linuxkit/binfmt:v0.7
-      - run: |
-          docker build -t quay.io/prometheus/cloudwatch-exporter:latest --pull .
-          if [[ -n "$CIRCLE_TAG" ]]; then
-            docker tag -t quay.io/prometheus/cloudwatch-exporter:"${CIRCLE_TAG}" quay.io/prometheus/cloudwatch-exporter:latest
-          fi
-      - run: docker images
-      - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-      - run: |
-          docker push quay.io/prometheus/cloudwatch-exporter:latest
-          if [[ -n "$CIRCLE_TAG" ]]; then
-            docker push quay.io/prometheus/cloudwatch-exporter:"${CIRCLE_TAG}"
-          fi
+          name: Build image
+          command: |
+            docker build -t "${CIRCLE_PROJECT_REPONAME}" --pull .
+      - run:
+          name: Publish image
+          command: |
+            if [[ -n "$CIRCLE_TAG" ]]; then
+              repository="${DOCKER_REGISTRY}/${DOCKER_ORG}/cloudwatch-exporter"
+              docker tag "${CIRCLE_PROJECT_REPONAME}" "${repository}:${CIRCLE_TAG}"
+              docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD $DOCKER_REGISTRY
+              docker push "${repository}:${CIRCLE_TAG}"
+            fi
 
 workflows:
   version: 2
@@ -48,12 +47,10 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - publish_image_to_quay:
-          context: org-context
+      - publish_image:
+          context: org-global
           requires:
             - build
           filters:
-            branches:
-              only: master
             tags:
               only: /.*/
